--- a/src/styles/acordio.css
+++ b/src/styles/acordio.css
@@ -4,7 +4,9 @@
     box-sizing: border-box;
 }
 
-
+a{
+    text-decoration: none;
+}
 /* Style the buttons that are used to open and close the accordion panel */
 .accordion {
     color: #444;
@@ -67,4 +69,17 @@ button{
     align-items: center;
     justify-content: center;
     width: 100%;
+}
+
+.cont3 p{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    font-size: 12pt;
+}
+
+.cont3 .img{
+    width: 20px;
+    margin-right: 10px;
 }
