--- a/src/styles/acordio.css
+++ b/src/styles/acordio.css
@@ -7,6 +7,9 @@
 a{
     text-decoration: none;
 }
+a:hover{
+    text-decoration: underline;
+}
 /* Style the buttons that are used to open and close the accordion panel */
 .accordion {
     color: #444;
